<resources>
    <string name="app_name">Layout Project</string>
    <string name="txtView">This is my layout project</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="chkbox1">Check Box 1</string>
    <string name="chkbox2">Check Box 2</string>
    <string name="chkbox3">Check Box 3</string>
    <string name="chkbox4">Check Box 4</string>
    <string name="chkbox5">Check Box 5</string>
    <string name="chkbox6">Check Box 6</string>
    <string name="imageContentDescription">Smiling Face Emoji</string>
</resources>